fixed swagger shopping list
